[b]Version 2007-09-15[/b]
 * The script create_deb.sh changes the debian changelog so the SVN revision 
   number is added to the generated *.deb file.
 * Added new option "Channels by default" in Preferences->General->Audio.
 * BTW, now the initial_* options in preferences are stored in its own
   section "[default]" in the config file.

[b]Version 2007-09-14[/b]
 * Added a small program (getrev) to extract the SVN revision number. Intended
   for Windows, where the script get_svn_revision.sh doesn't work.
 * Compiling as default the old code to resize the main window, as it has been
   reported that the new one doesn't work on some systems.

[b]Version 2007-09-13[/b]
 * Updated the Ukrainian, German and Japanese translations.
 * Now version.cpp returns the svn revision number.

[b]Version 0.5.59[/b]
 * Updated the Ukrainian translation.
 * Bugfix: when passing only one file through command line, the file wasn't
   added to the playlist.
 * Added support for right to left languages. The arrow icons are reversed.
   Has the play icon to be reversed too? I've done, but I'm not sure.
   Unfortunately the jump-where-clicked feature in time (and volume) slider 
   doesn't work well with RTL layout, so it's disabled in that case.
   If you want to take a look, run "smplayer -reverse".
 * By user request, added the total time in the floating control.

[b]Version 0.5.58[/b]
 * Updated the Polish, Ukrainian and German translations.
 * I hope the problems in Windows with the new code to resize the main 
   window are fixed now.
 * If the user selects the option to never resize the main window, the
   main window won't be resized when the playlist is docked/undocked.
 * The playlist is enabled again in fullscreen mode, although it will only
   appear floating.
 * Added dvr-ms to the list of extensions that the open dialog will show
   for videos.
 * Added an option in Preferences->Interface to change the default font of
   the application.

[b]Version 0.5.57[/b]